# rings

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/source/: complementarity.rst  conf.py  index.rst  integrations.rst  separability.rst
examples/: complementarity.py  pyg_separability.py  separability.py
examples/integrations/: graphbench.py  lightning.py  pyg.py
rings/: __init__.py  perturbations.py  utils.py
rings/complementarity/: comparator.py  functor.py
rings/integrations/: __init__.py  dgl.py  lightning.py  study.py
rings/separability/: comparator.py  functor.py
tests/: test_dgl_integration.py  test_lightning_callback.py  test_lightning_framework_integration.py  test_perturbations.py  test_study.py  test_utils.py
tests/complementarity/: conftest.py  test_functor.py  test_metrics.py  test_utils.py
tests/separability/: test_comparator.py  test_functor.py
