[project]
name = "rings-evaluation"
version = "0.1.0"
description = "RINGS: Relevant Information in Node Features and Graph Structure. An evaluation framework for graph-learning based on first principles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "pot>=0.9.5",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.15.13",
    "sphinx>=8.2.3",
]
